{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 175,
  "lineage": "bbd0079c-1660-005b-603e-97c6e745f27e",
  "resources": [
    {
      "module": "module.vimn_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0990f25dae5f0ae14",
            "arn": "arn:aws:ec2:eu-west-1:612250986574:instance/i-0a1bcea73ad4ac7c2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1bcea73ad4ac7c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vimn-infra",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-015c96e768108c4df",
            "private_dns": "ip-10-0-1-123.eu-west-1.compute.internal",
            "private_ip": "10.0.1.123",
            "public_ip": "54.216.141.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7f1560d54e902d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f04142adf74a57f",
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration-1"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-059369a4dfa462be3"
            ]
          },
          "dependencies": [
            "module.vimn_ec2.aws_key_pair.my_instance_key_pair",
            "module.vimn_ec2.data.aws_ami.amazon",
            "module.vimn_vpc.aws_security_group.sg",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0990f25dae5f0ae14",
            "arn": "arn:aws:ec2:eu-west-1:612250986574:instance/i-07ddf2094ef1fef10",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ddf2094ef1fef10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vimn-infra",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df7a8bb0b42083b5",
            "private_dns": "ip-10-0-1-55.eu-west-1.compute.internal",
            "private_ip": "10.0.1.55",
            "public_ip": "3.253.122.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056d87b75e01f16fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f04142adf74a57f",
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration-2"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-059369a4dfa462be3"
            ]
          },
          "dependencies": [
            "module.vimn_ec2.aws_key_pair.my_instance_key_pair",
            "module.vimn_ec2.data.aws_ami.amazon",
            "module.vimn_vpc.aws_security_group.sg",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_elb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727-20230404105959559600000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727",
            "target_id": "i-0a1bcea73ad4ac7c2"
          },
          "dependencies": [
            "module.vimn_ec2.aws_instance.EC2",
            "module.vimn_ec2.aws_key_pair.my_instance_key_pair",
            "module.vimn_ec2.data.aws_ami.amazon",
            "module.vimn_elb.aws_lb_target_group.vimn-tg",
            "module.vimn_vpc.aws_security_group.sg",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727-20230404105959587900000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727",
            "target_id": "i-07ddf2094ef1fef10"
          },
          "dependencies": [
            "module.vimn_ec2.aws_instance.EC2",
            "module.vimn_ec2.aws_key_pair.my_instance_key_pair",
            "module.vimn_ec2.data.aws_ami.amazon",
            "module.vimn_elb.aws_lb_target_group.vimn-tg",
            "module.vimn_vpc.aws_security_group.sg",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:loadbalancer/app/VIMN-ALB-PoC/2bcd0e210ae3c3b3",
            "arn_suffix": "app/VIMN-ALB-PoC/2bcd0e210ae3c3b3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "VIMN-ALB-PoC-1754245967.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:loadbalancer/app/VIMN-ALB-PoC/2bcd0e210ae3c3b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "VIMN-ALB-PoC",
            "security_groups": [
              "sg-059369a4dfa462be3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f04142adf74a57f"
              },
              {
                "subnet_id": "subnet-0fd972e6ad6360c3a"
              }
            ],
            "subnets": [
              "subnet-09f04142adf74a57f",
              "subnet-0fd972e6ad6360c3a"
            ],
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "vpc_id": "vpc-0636131ddf3673c40",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.vimn_vpc.aws_security_group.sg",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vinm-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:listener/app/VIMN-ALB-PoC/2bcd0e210ae3c3b3/fb9520415b2f5f5a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:listener/app/VIMN-ALB-PoC/2bcd0e210ae3c3b3/fb9520415b2f5f5a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:loadbalancer/app/VIMN-ALB-PoC/2bcd0e210ae3c3b3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vimn_elb.aws_lb.application-lb",
            "module.vimn_elb.aws_lb_target_group.vimn-tg",
            "module.vimn_vpc.aws_security_group.sg",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vimn-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727",
            "arn_suffix": "targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:612250986574:targetgroup/vimn-project-tg-PoC/788cbd7c0b14d727",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vimn-project-tg-PoC",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0636131ddf3673c40"
          },
          "dependencies": [
            "module.vimn_vpc.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:612250986574:internet-gateway/igw-07f5553e89274348a",
            "id": "igw-07f5553e89274348a",
            "owner_id": "612250986574",
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "vpc_id": "vpc-0636131ddf3673c40"
          },
          "dependencies": [
            "module.vimn_vpc.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:612250986574:route-table/rtb-0e3bd9d96f2914a58",
            "id": "rtb-0e3bd9d96f2914a58",
            "owner_id": "612250986574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f5553e89274348a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0636131ddf3673c40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vimn_vpc.aws_internet_gateway.gw",
            "module.vimn_vpc.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d0c45d5725a4712",
            "route_table_id": "rtb-0e3bd9d96f2914a58",
            "subnet_id": "subnet-09f04142adf74a57f"
          },
          "dependencies": [
            "module.vimn_vpc.aws_internet_gateway.gw",
            "module.vimn_vpc.aws_route_table.my_public_route_table",
            "module.vimn_vpc.aws_subnet.subnet01",
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:612250986574:security-group/sg-059369a4dfa462be3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059369a4dfa462be3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_PoC_DNS01",
            "name_prefix": "",
            "owner_id": "612250986574",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0636131ddf3673c40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vimn_vpc.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:612250986574:subnet/subnet-09f04142adf74a57f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09f04142adf74a57f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612250986574",
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "vpc_id": "vpc-0636131ddf3673c40"
          },
          "dependencies": [
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:612250986574:subnet/subnet-0fd972e6ad6360c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fd972e6ad6360c3a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612250986574",
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "vpc_id": "vpc-0636131ddf3673c40"
          },
          "dependencies": [
            "module.vimn_vpc.aws_vpc.vpc01",
            "module.vimn_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vimn_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:612250986574:vpc/vpc-0636131ddf3673c40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05cb644f89e60760a",
            "default_route_table_id": "rtb-0f34e53fd29f9a6d4",
            "default_security_group_id": "sg-06fe81a1a486f76f7",
            "dhcp_options_id": "dopt-f735e892",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0636131ddf3673c40",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f34e53fd29f9a6d4",
            "owner_id": "612250986574",
            "tags": {
              "Name": "Para_PoC_DNSServer_Migration"
            },
            "tags_all": {
              "Name": "Para_PoC_DNSServer_Migration"
            }
          }
        }
      ]
    }
  ]
}